--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ android {
 dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-fitness:21.0.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.4"
+
+
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
     implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
     implementation 'com.google.firebase:firebase-firestore:25.1.1'
