--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.4"
-
+    implementation 'com.jjoe64:graphview:4.2.2'
 
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
     implementation(platform("com.google.firebase:firebase-bom:33.7.0"))
